kubernetes/ex11minikubeclusterprj/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox 
  namespace: default
spec:
  containers:
    - name: busybox 
      image: busybox 
      command:
        - sleep
        - "3600"
