kubernetes/ex11minikubeclusterprj/ex11-nfs-pv-pod.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: nfs-pv-pod
spec:
  volumes: 
    - name: nfs-pv
      persistentVolumeClaim:
        claimName: nfs-pv-claim 
  containers:
    - name: nfs-client1
      image: nginx 
      ports:
        - containerPort: 8081
          name: "http-server1"
      volumeMounts:
        - mountPath: "/nfsshare"
          name: nfs-pv 
    - name: nfs-client2
      image: nginx
      ports:
        - containerPort: 8082
          name: "http-server2"
      volumeMounts:
        - mountPath: "/nfshare"
          name: nfs-pv
