kubernetes/ex11minikubeclusterprj/ex11httpd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ex11httpdemo
  namespace: default 
spec:
  containers:
    - name: lab3
      image: httpd 
      command:
        - sleep
        - "3600"
