kubernetes/ex11minikubeclusterprj/ex11_ingress_service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress 
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  spec:
    rules:
    - host:
      http:
      paths:
      - path: /nginx
        backend:
          serviceName: nginx_svc
          servicePort: 80
